--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".MainActivity">
+    tools:context=".activities.HomeActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -38,31 +38,33 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    >
+                    android:layout_marginEnd="10dp">
+
                     <LinearLayout
                         android:id="@+id/lin1"
                         android:layout_width="match_parent"
                         android:layout_height="135dp"
                         android:orientation="horizontal"
-                        android:layout_marginBottom="10dp"
-                        >
+                        android:layout_marginBottom="8dp">
+
                         <androidx.cardview.widget.CardView
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:layout_gravity="center"
-                            android:layout_marginRight="5dp"
                             android:layout_marginEnd="5dp"
                             android:orientation="vertical">
+
                             <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent">
+
                                 <Button
                                     android:id="@+id/praise_btn"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:background="@android:color/transparent"/>
+
                                 <de.hdodenhof.circleimageview.CircleImageView
                                     android:id="@+id/praise_icon"
                                     android:layout_width="50dp"
@@ -85,53 +87,91 @@
                         </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:id="@+id/lin2"
                         android:layout_width="match_parent"
                         android:layout_height="135dp"
                         android:layout_marginTop="15dp"
                         android:orientation="horizontal"
-                        android:layout_marginBottom="10dp"
+                        android:layout_marginBottom="8dp"
+                        android:weightSum="2.7">
 
-                        >
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/book_aodas_btn"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:layout_gravity="center"
-                            android:layout_marginRight="5dp"
+                            android:layout_weight="1.3"
                             android:layout_marginEnd="5dp"
                             android:orientation="vertical">
-                            <RelativeLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent">
-                                <Button
-                                    android:id="@+id/Add_DB_btn"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:background="@android:color/transparent"/>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:layout_gravity="center"
+                                android:gravity="center">
+
                                 <de.hdodenhof.circleimageview.CircleImageView
-                                    android:id="@+id/Add_DB_icon"
-                                    android:layout_width="60dp"
-                                    android:layout_height="60dp"
+                                    android:layout_width="55dp"
+                                    android:layout_height="55dp"
                                     android:src="@drawable/booking"
-                                    android:layout_centerInParent="true"/>
+                                    android:layout_gravity="center" />
+
                                 <TextView
-                                    android:id="@+id/Add_DB_tittle"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/booking"
-                                    android:textSize="15dp"
+                                    android:text="@string/booking_aodas"
+                                    android:textSize="15sp"
                                     android:textStyle="bold"
                                     android:transitionName="SharedName"
-                                    android:textColor="@color/black"
-                                    android:layout_below="@id/Add_DB_icon"
-                                    android:layout_centerHorizontal="true"
-                                    />
+                                    android:textColor="@color/black" />
 
-                            </RelativeLayout>
+                            </LinearLayout>
                         </androidx.cardview.widget.CardView>
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight=".1"/>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/book_nahda_btn"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1.3"
+                            android:layout_marginEnd="5dp"
+                            android:layout_gravity="end"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:layout_gravity="center"
+                                android:gravity="center">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="55dp"
+                                    android:layout_height="55dp"
+                                    android:src="@drawable/booking"
+                                    android:layout_gravity="center" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/booking_nahda"
+                                    android:textSize="15sp"
+                                    android:textStyle="bold"
+                                    android:transitionName="SharedName"
+                                    android:textColor="@color/black" />
+
+                            </LinearLayout>
+
+                        </androidx.cardview.widget.CardView>
+
                     </LinearLayout>
+
                     <LinearLayout
                         android:id="@+id/lin3"
                         android:layout_width="match_parent"
@@ -139,7 +179,8 @@
                         android:orientation="horizontal"
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="10dp"
-                        >
+                        android:layout_gravity="center">
+
                         <androidx.cardview.widget.CardView
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
