--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        >
+        android:layout_alignParentStart="true">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/black"
-                >
+                android:background="@color/black">
+
                 <ImageView
                     android:id="@+id/homePager"
                     android:layout_width="match_parent"
                     android:src="@drawable/vergionmary"
                     android:layout_height="230dp"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
                     android:layout_marginEnd="10dp">
 
                     <LinearLayout
-                        android:id="@+id/lin1"
+                        android:id="@+id/praise_lin"
                         android:layout_width="match_parent"
                         android:layout_height="135dp"
                         android:orientation="horizontal"
@@ -81,8 +81,7 @@
                                     android:textStyle="bold"
                                     android:textColor="@color/black"
                                     android:layout_below="@id/praise_icon"
-                                    android:layout_centerHorizontal="true"
-                                    />
+                                    android:layout_centerHorizontal="true" />
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
 
