--- a/app/src/main/res/layout/activity_reserve_event.xml
+++ b/app/src/main/res/layout/activity_reserve_event.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:focusable="true"
+    android:background="@color/edit_text_bg_border"
     android:id="@+id/eventsListContainer">
 
     <androidx.recyclerview.widget.RecyclerView
