--- a/app/src/main/res/layout/activity_booking_event.xml
+++ b/app/src/main/res/layout/activity_booking_event.xml
@@ -36,6 +36,7 @@
         <EditText
             android:id="@+id/birthdayDateET"
             style="@style/edit_text_sty"
+            android:focusable="false"
             android:hint="@string/birthday_date" />
 
         <RelativeLayout
