--- a/app/src/main/res/layout/activity_booking_confirmation.xml
+++ b/app/src/main/res/layout/activity_booking_confirmation.xml
@@ -1,9 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".booking.bookEvent.BookingConfirmationActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/images"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:weightSum="1"
+            android:orientation="horizontal"
+            android:layout_marginTop="25dp"
+            >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/appicon"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/church"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:textColor="@color/colorPrimary"
+            android:text="@string/testCode"
+            android:layout_below="@id/images"
+            android:textAlignment="center"
+            android:layout_marginTop="90dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="25dp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:textColor="@color/black"
+            android:text="@string/confermbook"
+            android:layout_below="@id/church"
+            android:layout_marginTop="75dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/confirm_activity_cancel_btn"
+            android:layout_width="150dp"
+            android:layout_height="@dimen/my_edit_text_height"
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/bg_white_with_red_border"
+            android:text="@string/cancel"
+            android:textAllCaps="true"
+            android:textColor="@color/red"
+            android:textStyle="bold"
+            android:layout_marginTop="80dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/message"
+            tools:ignore="ButtonStyle" />
+    </RelativeLayout>
+</ScrollView>
