--- a/app/src/main/res/layout/activity_booking_event.xml
+++ b/app/src/main/res/layout/activity_booking_event.xml
@@ -40,7 +40,10 @@
             android:id="@+id/birthdayDateET"
             style="@style/edit_text_sty"
             android:focusable="false"
-            android:hint="@string/birthday_date" />
+            android:hint="@string/birthday_date"
+            android:textDirection="rtl"
+            android:drawablePadding="10dp"
+            android:drawableStart="@drawable/ic_calender"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -63,8 +66,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="50dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginBottom="50dp"
             android:weightSum="2">
 
