--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -135,13 +135,27 @@
             android:layout_height="wrap_content"
             android:padding="2dp"
             android:layout_below="@+id/timeLin"
-            android:layout_marginStart="10dp"
             android:textColor="@color/black"
             android:textSize="14sp"
+            android:text="ابونا ميخائيل - كنيسة الملاك ميخائيل بدير الملاك البحرى"
             android:layout_marginTop="2dp"
-            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:layout_marginEnd="60dp"
+            android:layout_marginStart="40dp"
+            android:layout_alignParentRight="true"
             android:gravity="center" />
 
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/card_unenable"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:background="@drawable/un_enable_bg"
+        android:visibility="gone"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:paddingEnd="10dp"
+        ></RelativeLayout>
 
 </RelativeLayout>
