--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,12 @@
     <color name="hint_text">#9CA299</color>
     <color name="trans_color">#80D3E1E1</color>
 
+
+    <color name="purple_200">#4E1313</color>
+    <color name="purple_500">#301B1B</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
+
 </resources>
