--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -67,6 +67,11 @@
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/black</item>
         <item name="android:textColor">@color/white</item>
     </style>
-
+    <style name="FollowReservation" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryDark">@color/purple_200</item>
+        <item name="colorAccent">@color/purple_200</item>
+    </style>
 
 </resources>
