--- a/app/src/main/res/layout/activity_booking_confirmation.xml
+++ b/app/src/main/res/layout/activity_booking_confirmation.xml
@@ -14,67 +14,67 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:weightSum="1"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:ignore="UselessParent">
 
             <ImageView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/appicon"/>
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/app_icon"
+                android:contentDescription="@string/image_confirmation_describtion" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:text="@string/register_code"
+                android:layout_marginTop="70dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/booking_number_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/testCode"
+                android:textAlignment="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="25dp"
+                android:textStyle="bold"
+                app:drawableEndCompat="@drawable/ic_copy_confirmation" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/red"
+                android:text="@string/confirm_book"
+                android:layout_marginTop="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:textAlignment="center"/>
+
+            <Button
+                android:id="@+id/confirm_activity_cancel_btn"
+                android:layout_width="150dp"
+                android:layout_height="@dimen/my_edit_text_height"
+                android:background="@drawable/bg_white_with_red_border"
+                android:text="@string/cancel"
+                android:textAllCaps="true"
+                android:textColor="@color/red"
+                android:textStyle="bold"
+                android:layout_marginTop="60dp"
+                android:layout_gravity="center_horizontal"
+                tools:ignore="ButtonStyle" />
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:text="كود التسجيل"
-            android:layout_marginTop="70dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textAlignment="center"/>
-
-        <TextView
-            android:id="@+id/booking_number_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:textColor="@color/colorPrimary"
-            android:text="@string/testCode"
-            android:textAlignment="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="25dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/red"
-            android:text="@string/confermbook"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textAlignment="center"/>
-
-        <Button
-            android:id="@+id/confirm_activity_cancel_btn"
-            android:layout_width="150dp"
-            android:layout_height="@dimen/my_edit_text_height"
-            android:background="@drawable/bg_white_with_red_border"
-            android:text="@string/cancel"
-            android:textAllCaps="true"
-            android:textColor="@color/red"
-            android:textStyle="bold"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center_horizontal"
-            tools:ignore="ButtonStyle" />
 
     </LinearLayout>
 </ScrollView>
